# pyFDN

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  TRANSLATION_STATUS.md  TRANSLATION_TRACKER.md  debug_signal_flow.py  pyproject.toml  requirements_dev.txt  ruff.toml  setup.py  test_coupled_rooms.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  aux_index.json  examples_index.json
.github/scripts/: generate-examples-index.js
.github/workflows/: ci.yml  docs.yml  examples.yml  manual.yml  release.yml
docs/: Makefile  api_reference.rst  conf.py  example_gallery.py  examples_gallery.rst  index.rst  installation.rst  make.bat  patch_rst.py  readme.rst  usage.rst
docs/_static/css/: custom.css
docs/api/: utils.rst
examples/: README.md  example_absorption_filters.ipynb  example_absorption_filters.py  example_absorption_geq.py  example_colorless_FDN.ipynb  example_colorless_FDN.py  example_coupled_rooms.ipynb  example_coupled_rooms.py  example_decorrelation.py  example_delay_matrix_density.ipynb  example_delay_matrix_density.py  example_dss2ss.ipynb  example_dss2tf.ipynb  example_dss_to_pr.py  example_dss_to_pr_direct.ipynb  example_dss_to_pr_direct.py  example_dss_to_pr_flamo.ipynb  example_dss_to_pr_flamo.py  example_dss_to_pr_flamo_direct.py  example_dss_to_ss.ipynb  example_dss_to_ss.py  example_dss_to_tf.ipynb  example_dss_to_tf.py  example_fdn_eigenvectors.py  example_fdn_gallery.py  example_fdn_matrix_gallery.py  example_first_order_absorption.py  example_graphic_eq.py  example_interpolate_matrix.ipynb  example_interpolate_matrix.py  example_nearest_sign_agnostic_orthogonal.py  example_one_pole_absorption.ipynb  example_one_pole_absorption.py  example_paraunitary_fdn.py  example_pole_boundaries.py  example_process_fdn.ipynb  example_process_fdn.py  example_process_fdn_vs_flamo.py  example_random_fdn_statistics.py  example_rir_to_fdn.py  (+16 more)
examples/AllpassFDN/: example_allpass_FDN_completion.ipynb  example_allpass_FDN_nested.ipynb  example_allpass_FDN_not_uniallpass.ipynb  example_allpass_FDN_poletti.ipynb  example_allpass_FDN_schroeder_in_loop.ipynb  example_allpass_filter_FDN.ipynb
examples/allpass_FDN/: example_allpass_FDN_completion.ipynb  example_allpass_FDN_completion.py  example_allpass_FDN_homogeneous_mimo.ipynb  example_allpass_FDN_homogeneous_mimo.py  example_allpass_FDN_homogeneous_siso.ipynb  example_allpass_FDN_homogeneous_siso.py  example_allpass_FDN_in_FDN.ipynb  example_allpass_FDN_in_FDN.py  example_allpass_FDN_nested.py  example_allpass_FDN_not_uniallpass.ipynb  example_allpass_FDN_not_uniallpass.py  example_allpass_FDN_poletti.ipynb  example_allpass_FDN_poletti.py  example_allpass_FDN_schroeder.ipynb  example_allpass_FDN_schroeder.py  example_allpass_FDN_schroeder_in_loop.ipynb  example_allpass_FDN_schroeder_in_loop.py
notebook_alternatives/marimo/: example_absorption_filters.py  example_coupled_rooms.py  example_delay_matrix_density.py  example_dss_to_pr_direct.py  example_dss_to_tf.py  example_one_pole_absorption.py  example_process_fdn.py
notebook_alternatives/marimo/allPass_FDN/: example_allpass_FDN_completion.py
src/pyFDN/: __init__.py  process.py
src/pyFDN/auxiliary/: RT602slope.py  SDN.py  __init__.py  absorption2T60.py  absorptionFilters.py  acoustics.py  allpass.py  audio.py  convert2zfilter.py  coupled_rooms.py  db2mag.py  delay.py  det_polynomial.py  filters.py  flamo.py  flamo_autograd_probe.py  flamo_graph.py  flamo_probe.py  flamo_runtime_probe.py  hertz2unit.py  is_bounding_curve.py  mag2db.py  marimo_utils.py  math.py  matrix_convolution.py  matrix_polyder.py  matrix_polyval.py  ms2smp.py  one_pole_absorption.py  plot.py  pole_boundaries.py  poles.py  poly_degree.py  processFDN.py  slope2RT60.py  tf_matrix.py  tiny_rotation_matrix.py  utils.py  zTF.py
src/pyFDN/dsp/: __init__.py  dfilt_matrix.py  dfiltmatrix.py  feedback_delay.py  filter_matrix.py  parallel_one_pole.py  sos_filter_bank.py  time_varying_matrix.py
src/pyFDN/examples/: example_absorption_filters.ipynb  example_coupled_rooms.py  example_dss2ss.ipynb  example_one_pole_absorption.ipynb  example_one_pole_absorption.py
src/pyFDN/generate/: SDN.py  allpass_in_fdn.py  anderson_matrix.py  complete_orthogonal.py  construct_cascaded_paraunitary_matrix.py  construct_paraunitary_from_elementals.py  construct_velvet_feedback_matrix.py  degree_one_lossless.py  fdn_matrix_gallery.py  householder_matrix.py  is_almost_zero.py  nearest_orthogonal.py  nearest_sign_agnostic_orthogonal.py  random_matrix_shift.py  random_orthogonal.py  sample_delay_lengths.py  schroeder_reverberator.py  shift_matrix.py  shift_matrix_distribute.py  vanilla_FDN.py
src/pyFDN/graphicEQ/: __init__.py  absorption_geq.py  bandpass_filter.py  design_geq.py  graphic_eq.py  probe_sos.py  shelving_filter.py
src/pyFDN/recursive/: __init__.py  biquads.py  core.py  delay_lines.py  feedback_mix.py  input_tap.py  output_tap.py  (+1 more)
tests/: __init__.py  conftest.py  matloader.py  test_api_reference.py  test_auxiliary_acoustics.py  test_auxiliary_delay.py  test_auxiliary_filters.py  test_auxiliary_flamo.py  test_auxiliary_math.py  test_auxiliary_plot.py  test_auxiliary_utils.py  test_coupled_rooms.py  test_det_polynomial.py  test_dsp.py  test_dss_to_pr.py  test_dss_to_pr_direct.py  test_dss_to_pr_flamo.py  test_dss_to_pr_flamo_direct.py  test_eager_trainer.py  test_example_gallery.py  test_flamo_autograd_probe.py  test_flamo_graph.py  test_flamo_one_pole_absorption.py  test_flamo_probe.py  test_flamo_runtime_probe.py  test_flamo_to_pr.py  test_generate.py  test_graphic_eq.py  test_is_bounding_curve.py  test_mag2db.py  test_marimo_conversion_examples.py  test_marimo_examples_run.py  test_matrix_convolution.py  test_matrix_polyder.py  test_matrix_polyval.py  test_one_pole_absorption.py  test_one_pole_absorption_regression.py  test_pole_boundaries.py  test_poly_degree.py  test_polydiag.py  (+12 more)
tests/reference/: README.md  example_onePoleAbsorption.mat  onePoleAbsorption_reference.mat
(+43 files in other folders)
