[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFDN"
version = "0.1.0"
description = "Python library for Feedback Delay Networks"
readme = "README.rst"
authors = [
  {name = "Kalyan Pandey", email = "pandey.kalyan416@gmail.com"}
]
maintainers = [
  {name = "Kalyan Pandey", email = "pandey.kalyan416@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
license = {text = "MIT license"}
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "jupyter",
  "ipython",
  "ipykernel",
  "flamo",
  "flareverb"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",  # testing
    "coverage>=7.0.0",  # testing
    "tox>=4.0.0",  # multi-environment testing
    "ruff>=0.1.0",  # linting
    "mypy>=1.0.0",  # type checking
    "Sphinx>=6.0.0",  # documentation
    "sphinx-rtd-theme>=1.0.0",  # documentation theme
    "twine>=4.0.0",  # packaging
    "wheel>=0.40.0",  # packaging
    "build>=0.10.0",  # packaging
    "bump2version>=1.0.0",  # version management
    "watchdog>=3.0.0",  # development tools
]

[project.urls]
bugs = "https://github.com/pandeyKalyan/pyFDN/issues"
changelog = "https://github.com/pandeyKalyan/pyFDN/blob/master/changelog.md"
homepage = "https://github.com/pandeyKalyan/pyFDN"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

