[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFDN"
version = "0.1.0"
description = "Python library for Feedback Delay Networks"
readme = "README.rst"
authors = [
  {name = "Sebastian J. Schlecht"},
  {name = "Facundo Franchino"},
  {name = "Jeremy Bai"},
]
maintainers = [
  {name = "Facundo Franchino"},
  {name = "Sebastian J. Schlecht"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
license = {text = "MIT license"}
dependencies = [
  "numpy",
  'torch',
  'torchaudio',
  'soundfile',
  "scipy",
  "flamo>=0.2.0",
  "flareverb"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",  # testing
    "pytest-cov>=4.0.0",  # coverage plugin for pytest
    "coverage>=7.0.0",  # coverage tooling
]
dev = [
    # Include everything from [test]
    "pytest>=7.0.0",  # testing
    "pytest-cov>=4.0.0",  # coverage plugin for pytest
    "coverage>=7.0.0",  # coverage tooling
    # Plus additional dev tools
    "tox>=4.0.0",  # multi-environment testing
    "ruff>=0.1.0",  # linting
    "mypy>=1.0.0",  # type checking
    "twine>=4.0.0",  # packaging
    "wheel>=0.40.0",  # packaging
    "build>=0.10.0",  # packaging
    "bump2version>=1.0.0",  # version management
    "watchdog>=3.0.0",  # development tools
]
docs = [
    "Sphinx>=6.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0",
    "pandoc>=2.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
bugs = "https://github.com/artificial-audio/pyFDN/issues"
changelog = "https://github.com/artificial-audio/pyFDN/blob/main/changelog.md"
homepage = "https://github.com/artificial-audio/pyFDN"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

