[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFDN"
version = "0.1.0"
description = "Python library for Feedback Delay Networks"
readme = "README.rst"
authors = [
  {name = "Sebastian J. Schlecht"},
  {name = "Facundo Franchino"},
  {name = "Jeremy Bai"},
]
maintainers = [
  {name = "Facundo Franchino"},
  {name = "Sebastian J. Schlecht"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy",
  "soundfile",
  "scipy",
  "flamo>=0.2.13",
  "flareverb",
  "pyroomacoustics",
]

[project.optional-dependencies]
examples = [
    "marimo",  # the example notebooks are marimo apps
    "matplotlib>=3.5.0",  # examples build matplotlib figures
    "plotly>=5.0.0",  # examples build plotly figures
    "graphviz>=0.20",  # draw_flamo_graph (also needs the system 'dot' binary to render)
]
test = [
    "marimo",  # deps to run the example notebooks under test
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "graphviz>=0.20",
    "pytest>=7.0.0",  # testing
    "pytest-cov>=4.0.0",  # coverage plugin for pytest
    "coverage>=7.0.0",  # coverage tooling
]
dev = [
    "pyFDN[test]",  # everything from [test] (and transitively [examples])
    "tox>=4.0.0",  # multi-environment testing
    "ruff>=0.1.0",  # linting
    "mypy>=1.0.0",  # type checking
    "twine>=4.0.0",  # packaging
    "wheel>=0.40.0",  # packaging
    "build>=0.10.0",  # packaging
    "bump-my-version>=1.0.0",  # version management
    "watchdog>=3.0.0",  # development tools
    "pre-commit>=3.0.0",  # git hooks
]
docs = [
    "Sphinx>=6.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-marimo",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0",
    "pandoc>=2.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "graphviz>=0.20",  # draw_flamo_graph cells in the static marimo export (needs system 'dot' too)
]

[project.urls]
bugs = "https://github.com/artificial-audio/pyFDN/issues"
changelog = "https://github.com/artificial-audio/pyFDN/blob/main/changelog.md"
homepage = "https://github.com/artificial-audio/pyFDN"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "src"
mypy_path = "src"

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true
# numpy stubs legitimately return Any for many ufunc/indexing operations
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
# Tests: relaxed — focus on source correctness, not test annotation coverage
module = "tests.*"
allow_untyped_defs = true
disable_error_code = [
    "attr-defined",
    "no-untyped-call",
    "unused-ignore",
    "call-arg",      # test API mismatches caught here are tracked as issues
    "arg-type",
    "override",
    "return-value",
    "no-untyped-def",
]

[[tool.mypy.overrides]]
# Examples: demo scripts, not library code
module = "examples.*"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def", "attr-defined"]

[[tool.mypy.overrides]]
# Docs: Sphinx config
module = "docs.*"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
# SDN: complex geometry/simulation research code, annotation work in progress
module = "pyFDN.generate.SDN"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def", "attr-defined", "type-var"]

[[tool.mypy.overrides]]
# Allpass completion: complex optimisation code, annotation work in progress
module = "pyFDN.generate.allpass_FDN.allpass_completion"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
# FLAMO integration helpers: depends on untyped external library
module = "pyFDN.auxiliary.flamo"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
# FLAMO-based PR translation: annotation work in progress
module = "pyFDN.translate.dss_to_pr_flamo"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def", "unused-ignore"]

[[tool.mypy.overrides]]
# Coupled rooms: research code, annotation work in progress
module = "pyFDN.auxiliary.coupled_rooms"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def", "attr-defined"]

[[tool.mypy.overrides]]
# Recursive module: PyTorch-heavy, annotation work in progress
module = "pyFDN.recursive.*"
allow_untyped_defs = true
disable_error_code = ["no-untyped-call", "no-untyped-def", "override", "arg-type", "call-arg"]

[[tool.mypy.overrides]]
# Acoustics helpers: ArrayLike-heavy DSP code
module = "pyFDN.auxiliary.acoustics"
disable_error_code = ["operator", "index", "arg-type"]

# Configure the max output size in Marimo notebooks
[tool.marimo.runtime]
output_max_bytes = 80_000_000
